# security-schemas/index.js
@@ -1,5 +1,5 @@
 "use strict";
 let securityschemas = {};
 securityschemas.basicAuth = require("./basicAuth");
-
+securityschemas.bearerAuth = require("./bearerAuth");
 module.exports = securityschemas;
